# CRAB2.0--VM

./: .gitignore  C++.gitignore  README.md  VisualStudio.gitignore  ignore.gitignore
VM/: Common.cpp  Operator.h  ParsingHelper.cpp  ParsingHelper.h  VirtualMachine.cpp  VirtualMachine.h  common.h  func_comparison_operators.cpp  func_flow_control_operators.cpp  func_logic_operators.cpp  func_math_operators.cpp  func_memory_transfer_Operators.cpp
WtUI/: CMakeLists.txt  crab-debug.exe.launch  crab-release.exe.launch  crab.cpp  crab.h  crab.wui  main.cpp  ui_crab.h
WtUI/resources/ace-editor/: mode-javascript.js  mynew_higlight_rules.js
WtUI_Build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CRAB.sln  CRAB.vcxproj  CRAB.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
WtUI_Build/CRAB.dir/Release/CRAB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
WtUI_Build/resources/: editor.js  main.css
WtUI_Build/resources/ace-editor/: mode-assembly_x86.js  mode-crab.js
WtUI_Build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
